[IE11 Bug Fix] Flexbox Bug Stretching Card Image

--- a/src/UI/Buyer/src/styles/_shame.scss
+++ b/src/UI/Buyer/src/styles/_shame.scss
@@ -9,3 +9,7 @@ body {
 .mt-6 {
     margin-top: 4.5rem;
 }
+
+.flex-shrink-0 {
+    flex-shrink: 0;
+}
